# CloudForge

./: .env.example  .gitignore  Makefile  README.md  docker-compose.observability.yml  docker-compose.prod.yml  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  drift.yml  terraform.yml
app/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
app/src/cloudforge/: __init__.py  config.py  db.py  health.py  main.py  metrics.py  middleware.py  telemetry.py
app/tests/: test_health.py
docs/: deployment-guide.md  scaling-strategy.md  security-model.md
docs/architecture/: 01-remote-state.md  02-networking.md  03-security-iam.md  04-data-layer.md  05-compute.md  06-application.md  07-monitoring.md  08-cicd.md  09-https.md  README.md  module-diagram.md  network-diagram.md
docs/interview/: README.md  alternative-designs.md  cost-considerations.md  failure-scenarios.md  operational-procedures.md  scaling-strategy.md  service-choices.md  terraform-architecture.md  tradeoffs.md
docs/performance/: optimization.md
docs/portfolio/: README.md  architecture.md  cost-estimate.md  demo-script.md  deploy-verification.md  design-decisions.md  security-posture.md
docs/reliability/: disaster-recovery.md  high-availability.md
docs/runbooks/: README.md  deploy.md  first-deploy.md  incident-response.md  rollback.md  teardown.md
infrastructure/terraform/: .tflint.hcl
observability/: prometheus.yml
scripts/: bootstrap.sh  deploy.sh  rollback.sh  setup-github-secrets.sh  smoke-test.sh
(+69 files in other folders)
